// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListField - Collaborators renders a list of item members and an autocomplete input 1`] = `
<div>
  <div
    name="collaborators"
    tabindex="-1"
  >
    <div
      class="staff-list container"
      data-rbd-droppable-context-id="0"
      data-rbd-droppable-id="CollaboratorList"
    >
      <div
        aria-describedby="rbd-hidden-text-0-hidden-text-0"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="0"
        data-rbd-drag-handle-draggable-id="6f23f2f8-10dd-454a-8497-2ba972c980c4"
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="6f23f2f8-10dd-454a-8497-2ba972c980c4"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="mock-collaborator"
        />
      </div>
      <div
        aria-describedby="rbd-hidden-text-0-hidden-text-0"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="0"
        data-rbd-drag-handle-draggable-id="17d0e2c0-9a02-421b-93bf-d081339090cc"
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="17d0e2c0-9a02-421b-93bf-d081339090cc"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="mock-collaborator"
        />
      </div>
      <div
        aria-describedby="rbd-hidden-text-0-hidden-text-0"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="0"
        data-rbd-drag-handle-draggable-id="2aba6189-ad7e-45a8-b269-bea071b80391"
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="2aba6189-ad7e-45a8-b269-bea071b80391"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="mock-collaborator"
        />
      </div>
    </div>
    <label
      class="w-100"
      for="Collaborator-search"
      id="label-Collaborator-search"
    >
      <strong>
        Search or add new Collaborator:
      </strong>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="react-autowhatever-Collaborator-search"
        class="react-autosuggest__container position-relative"
        role="combobox"
      >
        <input
          aria-autocomplete="list"
          aria-controls="react-autowhatever-Collaborator-search"
          autocomplete="off"
          class="form-control"
          placeholder=""
          type="text"
          value=""
        />
        <div
          id="react-autowhatever-Collaborator-search"
          role="listbox"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`ListField - Collaborators renders correctly with an error after failed submission 1`] = `
<div>
  <div
    name="collaborators"
    tabindex="-1"
  >
    <div
      class="fade alert-content alert alert-danger show"
      role="alert"
    >
      <div
        class="pgn__alert-message-wrapper"
      >
        <div
          class="alert-message-content"
        >
          This field is required
        </div>
      </div>
    </div>
    <div
      class="staff-list container"
      data-rbd-droppable-context-id="2"
      data-rbd-droppable-id="CollaboratorList"
    >
      <div
        aria-describedby="rbd-hidden-text-2-hidden-text-11"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="2"
        data-rbd-drag-handle-draggable-id="6f23f2f8-10dd-454a-8497-2ba972c980c4"
        data-rbd-draggable-context-id="2"
        data-rbd-draggable-id="6f23f2f8-10dd-454a-8497-2ba972c980c4"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="mock-collaborator"
        />
      </div>
      <div
        aria-describedby="rbd-hidden-text-2-hidden-text-11"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="2"
        data-rbd-drag-handle-draggable-id="17d0e2c0-9a02-421b-93bf-d081339090cc"
        data-rbd-draggable-context-id="2"
        data-rbd-draggable-id="17d0e2c0-9a02-421b-93bf-d081339090cc"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="mock-collaborator"
        />
      </div>
      <div
        aria-describedby="rbd-hidden-text-2-hidden-text-11"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="2"
        data-rbd-drag-handle-draggable-id="2aba6189-ad7e-45a8-b269-bea071b80391"
        data-rbd-draggable-context-id="2"
        data-rbd-draggable-id="2aba6189-ad7e-45a8-b269-bea071b80391"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="mock-collaborator"
        />
      </div>
    </div>
    <label
      class="w-100"
      for="Collaborator-search"
      id="label-Collaborator-search"
    >
      <strong>
        Search or add new Collaborator:
      </strong>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="react-autowhatever-Collaborator-search"
        class="react-autosuggest__container position-relative"
        role="combobox"
      >
        <input
          aria-autocomplete="list"
          aria-controls="react-autowhatever-Collaborator-search"
          autocomplete="off"
          class="form-control"
          placeholder=""
          type="text"
          value=""
        />
        <div
          id="react-autowhatever-Collaborator-search"
          role="listbox"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`ListField - Collaborators renders correctly with referred props 1`] = `
<div>
  <div
    name="collaborators"
    tabindex="-1"
  >
    <div
      class="staff-list container"
      data-rbd-droppable-context-id="1"
      data-rbd-droppable-id="CollaboratorList"
    >
      <div
        aria-describedby="rbd-hidden-text-1-hidden-text-5"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="1"
        data-rbd-drag-handle-draggable-id="6f23f2f8-10dd-454a-8497-2ba972c980c4"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="6f23f2f8-10dd-454a-8497-2ba972c980c4"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="mock-collaborator"
        />
      </div>
      <div
        aria-describedby="rbd-hidden-text-1-hidden-text-5"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="1"
        data-rbd-drag-handle-draggable-id="17d0e2c0-9a02-421b-93bf-d081339090cc"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="17d0e2c0-9a02-421b-93bf-d081339090cc"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="mock-collaborator"
        />
      </div>
      <div
        aria-describedby="rbd-hidden-text-1-hidden-text-5"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="1"
        data-rbd-drag-handle-draggable-id="2aba6189-ad7e-45a8-b269-bea071b80391"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="2aba6189-ad7e-45a8-b269-bea071b80391"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="mock-collaborator"
        />
      </div>
      <div
        aria-describedby="rbd-hidden-text-1-hidden-text-5"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="1"
        data-rbd-drag-handle-draggable-id="00000000-0000-0000-0000-000000000000"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="00000000-0000-0000-0000-000000000000"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="mock-collaborator"
        />
      </div>
    </div>
    <label
      class="w-100"
      for="Collaborator-search"
      id="label-Collaborator-search"
    >
      <strong>
        Search or add new Collaborator:
      </strong>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="react-autowhatever-Collaborator-search"
        class="react-autosuggest__container position-relative"
        role="combobox"
      >
        <input
          aria-autocomplete="list"
          aria-controls="react-autowhatever-Collaborator-search"
          autocomplete="off"
          class="form-control"
          placeholder=""
          type="text"
          value=""
        />
        <div
          id="react-autowhatever-Collaborator-search"
          role="listbox"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`ListField - Staffers renders a list of staff members and an autocomplete input 1`] = `
<div
  tabIndex="-1"
>
  <DragDropContext
    onDragEnd={[Function]}
  >
    <Connect(Droppable)
      direction="vertical"
      droppableId="staffList"
      getContainerForClone={[Function]}
      ignoreContainerClipping={false}
      isCombineEnabled={false}
      isDropDisabled={false}
      mode="standard"
      renderClone={null}
      type="DEFAULT"
    >
      <Component />
    </Connect(Droppable)>
  </DragDropContext>
  <label
    className="w-100"
    htmlFor="staff-search"
    id="label-staff-search"
  >
    <strong>
      Search or add new staff:
    </strong>
    <Autosuggest
      alwaysRenderSuggestions={false}
      containerProps={{}}
      focusInputOnSuggestionClick={true}
      getSuggestionValue={[Function]}
      highlightFirstSuggestion={false}
      id="staff-search"
      inputProps={
        {
          "className": "form-control",
          "disabled": false,
          "onChange": [Function],
          "placeholder": "",
          "type": "text",
          "value": "",
        }
      }
      multiSection={false}
      onSuggestionSelected={[Function]}
      onSuggestionsClearRequested={[Function]}
      onSuggestionsFetchRequested={[Function]}
      renderSuggestion={[Function]}
      renderSuggestionsContainer={[Function]}
      shouldKeepSuggestionsOnSelect={[Function]}
      shouldRenderSuggestions={[Function]}
      suggestions={[]}
      theme={
        {
          "container": "react-autosuggest__container position-relative",
          "suggestionHighlighted": "react-autosuggest__suggestion--highlighted bg-gray-300",
          "suggestionsContainerOpen": "react-autosuggest__suggestions-container--open bg-white border-gray-300 w-100",
          "suggestionsList": "react-autosuggest__suggestions-list m-0 p-0 list-unstyled overflow-auto",
        }
      }
    />
  </label>
</div>
`;

exports[`ListField - Staffers renders correctly with an error after failed submission 1`] = `
<div
  tabIndex="-1"
>
  <ForwardRef
    dismissible={false}
    onClose={[Function]}
    show={true}
    stacked={false}
    transition={
      {
        "$$typeof": Symbol(react.forward_ref),
        "defaultProps": {
          "appear": false,
          "in": false,
          "mountOnEnter": false,
          "timeout": 300,
          "unmountOnExit": false,
        },
        "render": [Function],
      }
    }
    variant="danger"
  >
    This field is required
  </ForwardRef>
  <DragDropContext
    onDragEnd={[Function]}
  >
    <Connect(Droppable)
      direction="vertical"
      droppableId="staffList"
      getContainerForClone={[Function]}
      ignoreContainerClipping={false}
      isCombineEnabled={false}
      isDropDisabled={false}
      mode="standard"
      renderClone={null}
      type="DEFAULT"
    >
      <Component />
    </Connect(Droppable)>
  </DragDropContext>
  <label
    className="w-100"
    htmlFor="staff-search"
    id="label-staff-search"
  >
    <strong>
      Search or add new staff:
    </strong>
    <Autosuggest
      alwaysRenderSuggestions={false}
      containerProps={{}}
      focusInputOnSuggestionClick={true}
      getSuggestionValue={[Function]}
      highlightFirstSuggestion={false}
      id="staff-search"
      inputProps={
        {
          "className": "form-control",
          "disabled": false,
          "onChange": [Function],
          "placeholder": "",
          "type": "text",
          "value": "",
        }
      }
      multiSection={false}
      onSuggestionSelected={[Function]}
      onSuggestionsClearRequested={[Function]}
      onSuggestionsFetchRequested={[Function]}
      renderSuggestion={[Function]}
      renderSuggestionsContainer={[Function]}
      shouldKeepSuggestionsOnSelect={[Function]}
      shouldRenderSuggestions={[Function]}
      suggestions={[]}
      theme={
        {
          "container": "react-autosuggest__container position-relative",
          "suggestionHighlighted": "react-autosuggest__suggestion--highlighted bg-gray-300",
          "suggestionsContainerOpen": "react-autosuggest__suggestions-container--open bg-white border-gray-300 w-100",
          "suggestionsList": "react-autosuggest__suggestions-list m-0 p-0 list-unstyled overflow-auto",
        }
      }
    />
  </label>
</div>
`;

exports[`ListField - Staffers renders correctly with referred props 1`] = `
<div
  tabIndex="-1"
>
  <DragDropContext
    onDragEnd={[Function]}
  >
    <Connect(Droppable)
      direction="vertical"
      droppableId="staffList"
      getContainerForClone={[Function]}
      ignoreContainerClipping={false}
      isCombineEnabled={false}
      isDropDisabled={false}
      mode="standard"
      renderClone={null}
      type="DEFAULT"
    >
      <Component />
    </Connect(Droppable)>
  </DragDropContext>
  <label
    className="w-100"
    htmlFor="staff-search"
    id="label-staff-search"
  >
    <strong>
      Search or add new staff:
    </strong>
    <Autosuggest
      alwaysRenderSuggestions={false}
      containerProps={{}}
      focusInputOnSuggestionClick={true}
      getSuggestionValue={[Function]}
      highlightFirstSuggestion={false}
      id="staff-search"
      inputProps={
        {
          "className": "form-control",
          "disabled": false,
          "onChange": [Function],
          "placeholder": "",
          "type": "text",
          "value": "",
        }
      }
      multiSection={false}
      onSuggestionSelected={[Function]}
      onSuggestionsClearRequested={[Function]}
      onSuggestionsFetchRequested={[Function]}
      renderSuggestion={[Function]}
      renderSuggestionsContainer={[Function]}
      shouldKeepSuggestionsOnSelect={[Function]}
      shouldRenderSuggestions={[Function]}
      suggestions={[]}
      theme={
        {
          "container": "react-autosuggest__container position-relative",
          "suggestionHighlighted": "react-autosuggest__suggestion--highlighted bg-gray-300",
          "suggestionsContainerOpen": "react-autosuggest__suggestions-container--open bg-white border-gray-300 w-100",
          "suggestionsList": "react-autosuggest__suggestions-list m-0 p-0 list-unstyled overflow-auto",
        }
      }
    />
  </label>
</div>
`;
